cmake_minimum_required(VERSION 3.12)
project(rougetutorial)

find_package(librouge)

add_subdirectory("chapter-01-hellocpp")
add_subdirectory("chapter-02-hellooop")
add_subdirectory("chapter-03-walkmap")
add_subdirectory("chapter-04-newmap")
add_subdirectory("chapter-05-fov")
add_subdirectory("chapter-06-monsters")
